...
    static let profileNameEditorIdentifier = "profile_name_editor"
    static let profileDateOfBirthEditorIdentifier = "profile_date_of_birth_editor"
    static let profileHeightEditorIdentifier = "profile_height_editor"
    static let profileEditorCancelIdentifier = "profile_editor_cancel_button"

    static let rootAccessibilityIdentifiers = [
        "settings_profile_link",
        "settings_tracking_link",
        "settings_integrations_link",
        "settings_account_subscription_link",
        "settings_security_link",
        "settings_privacy_data_link",
        WorldClassScreen.settings.accessibilityIdentifier
    ]

...
